--- a/.github/workflows/mark2web.yaml
+++ b/.github/workflows/mark2web.yaml
@@ -53,4 +53,4 @@ jobs:
         git config --global user.email '${{ github.actor }}@users.noreply.github.com'
         git remote set-url origin https://x-access-token:${{ secrets.AUTO_RENDER_PAT_M2W }}@github.com/$GITHUB_REPOSITORY
         git add -A 
-        git diff-index --quiet HEAD || git commit -m " - Mark2Web auto-render - ${{ github.event.head_commit.message }}" && git push    
+        git diff-index --quiet HEAD || git commit -m " ${{ github.event.head_commit.message }} - Mark2Web auto-render" && git push    
